--- a/Week-8-HTML-CSS-JavaScript/ProblemSet_8/homepage/index.html
+++ b/Week-8-HTML-CSS-JavaScript/ProblemSet_8/homepage/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,11 +17,26 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+
     <link href="styles.css" rel="stylesheet" />
-    <title>My Webpage</title>
+    <title>My PET ADOPTION</title>
   </head>
   <body>
-    hello, homepage
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="index.html">Home</a>
+      <div class="navbar-nav">
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="adopt.html">Adopt</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </div>
+    </nav>
+
+    <div class="container">
+      <h1>Welcome to My Website</h1>
+      <p>This is the main page.</p>
+      <button id="greet" class="btn btn-primary">Greet Me!</button>
+      <div id="message"></div>
+    </div>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -30,15 +48,5 @@
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"
   ></script>
+  <script src="script.js"></script>
 </html>
-
-<!-- Implement in your homepage directory a website that must:
-
-Contain at least four different .html pages, at least one of which is index.html (the main page of your website), and it should be possible to get from any page on your website to any other page by following one or more hyperlinks.
-Use at least ten (10) distinct HTML tags besides <html>, <head>, <body>, and <title>. Using some tag (e.g., <p>) multiple times still counts as just one (1) of those ten!
-Integrate one or more features from Bootstrap into your site. Bootstrap is a popular library (that comes with lots of CSS classes and more) via which you can beautify your site. See Bootstrap’s documentation to get started. In particular, you might find some of Bootstrap’s components of interest. 
-
-Have at least one stylesheet file of your own creation, styles.css, which uses at least five (5) different CSS selectors (e.g. tag (example), class (.example), or ID (#example)), and within which you use a total of at least five (5) different CSS properties, such as font-size, or margin; and
-Integrate one or more features of JavaScript into your site to make your site more interactive. For example, you can use JavaScript to add alerts, to have an effect at a recurring interval, or to add interactivity to buttons, dropdowns, or forms. Feel free to be creative!
-Ensure that your site looks nice on browsers both on mobile devices as well as laptops and desktops.
-You should also create a text file, specification.txt, which lists the 10 HTML tags and 5 CSS properties you’ve used, as well as a brief (one-sentence) description of how you chose to use JavaScript and Bootstrap. -->
